# spey

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CITATIONS.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: black.yml  check+build+deploy.yaml  docs.yml  pre-commit.yaml  pylint.yml  tests.yml
data/path_finder/: example_data.json  overlap_matrix.csv
docs/: Makefile  api.rst  bibliography.rst  citations.rst  comb.rst  conf.py  contributing.rst  exclusion.md  exclusion.rst  index.rst  installation.rst  introduction.rst  known_issues.rst  multiparam.rst  new_plugin.rst  outreach.rst  plugins.rst  quick_start.rst  release_notes.rst  requirements.txt  sharp_bits.rst  tuto_plugin.rst  tutorials.rst
docs/_static/css/: custom.css
docs/_templates/: navbar-logo.html
docs/api/: base_classes.rst  combiner.rst  default_backends.rst  dev_tools.rst  grad_tools.rst  hypothesis_testing.rst  index.rst  multiparam.rst  spey.base.rst  spey.hypothesis_testing.rst  spey.hypothesis_testing.test_statistics.rst  spey.rst  spey.system.exceptions.rst  statistical_model.rst  top_level.rst
docs/bib/: cited.bib  references.bib
docs/ext/: xref.py
docs/releases/: changelog-dev.md  changelog-v0.1.1.md  changelog-v0.1.md  changelog-v0.2.md  pre-release-v0.2.7.md
docs/tutorials/: cross-section-limits.ipynb  functional_tuto.ipynb  gradients.md  histogram.ipynb  intro_spey.ipynb  multiparameter_contour.ipynb  signal_unc.md  signal_uncertainties.ipynb
src/madstats/: __init__.py  _version.py  utils.py  utils_cls.py
src/madstats/backends/: __init__.py
src/madstats/base/: backend_base.py  recorder.py  statistical_model_base.py
src/madstats/combiner/: prediction_combiner.py
src/madstats/interface/: statistical_model.py
src/madstats/system/: exceptions.py
src/madstats/tools/: asymptotic_calculator.py  utils_cls.py
src/spey/: __init__.py  _version.py  about.py  helper_functions.py  math.py  typing.py  utils.py
src/spey/backends/: __init__.py  distributions.py
src/spey/base/: __init__.py  backend_base.py  hypotest_base.py  model_config.py  recorder.py  utils.py
src/spey/combiner/: __init__.py  prediction_combiner.py  statistics_combiner.py  uncorrelated_statistics_combiner.py
src/spey/hypothesis_testing/: __init__.py  asymptotic_calculator.py  distributions.py  test_statistics.py  toy_calculator.py  upper_limits.py  utils.py  utils_cls.py
src/spey/interface/: __init__.py  functiontools.py  (+1 more)
test/: background_test.json
tests/: signal_test.json  simplified_likelihood_data.npz  test_about_module.py  test_backend_base.py  test_cache.py  test_cls_computer.py  test_combiner.py  test_core_fit.py  test_default_pdf.py  test_distributions.py  test_hypotest_base.py  test_initialisation.py  test_logger.py  test_math.py  test_minuit.py  test_multiparam.py  test_pkg_init.py  test_scipy_tools.py  test_simplified_likelihood.py  test_simplifiedllhd_limit.py  test_statistical_model.py  test_test_stats.py  test_third_moment.py  test_uncertainty_synthesizer.py  test_uncorr_stats_combiner.py  test_webutils.py
tests/pyhf_backend/: test_pyhf_data.py
(+50 files in other folders)
