[metadata]
name = madstats
description = A universal statistics package for LHC reinterpretation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MadAnalysis/madstats
author = Jack Y. Araz
author_email = jack.araz@durham.ac.uk
license = MIT
license_file = LICENSE
keywords = physics statistics LHC reinterpretation
project_urls =
    Source Code = https://github.com/MadAnalysis/madstats
    Issue Tracker = https://github.com/MadAnalysis/madstats/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy>=1.21.6

[options.packages.find]
where = src
